Bug 119065 - Formatting: Last bullet of the bullet list is disappearing after removing a item from the bulleted list using backspace
Summary: Formatting: Last bullet of the bullet list is disappearing after removing a i...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, needsUXEval, regression
Depends on:
Blocks:
 
Reported: 2018-08-02 14:27 UTC by Telesto
Modified: 2018-10-29 17:50 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (11.60 KB, application/vnd.oasis.opendocument.presentation)
2018-08-02 14:27 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-08-02 14:27:32 UTC
Description:
Formatting: Last bullet of the bullet list is disappearing after removing a item from the bulleted list using backspace

Steps to Reproduce:
1. Open the attached file
2. Delete the delete text using backspace (cursor moves up to "BBB") & bullet disappears


Actual Results:
Bullet of BBB disappears

Expected Results:
Should be visible


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.2.0.0.alpha0+
Build ID: 1b21ff86effe58ae368457de8fec654ba4c8edd9
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-30_03:13:35
Locale: nl-NL (nl_NL); Calc: CL

but not in
Version: 6.0.0.1.0+
Build ID: 47cc374c0659fd3db74a1b184c870eaa56bc385b
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 1 Telesto 2018-08-02 14:27:45 UTC
Created attachment 143933 [details]
Example file
Comment 2 raal 2018-08-03 05:13:54 UTC
no repro with Version: 6.2.0.0.alpha0+
Build ID: dcbb65f2a4a3ee70ccd4896d7a5e975dbd9e6509
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 
but my  build is 9 days old..
Comment 3 Telesto 2018-08-03 07:57:50 UTC
(In reply to raal from comment #2)
> no repro with Version: 6.2.0.0.alpha0+
> Build ID: dcbb65f2a4a3ee70ccd4896d7a5e975dbd9e6509
> CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 
> but my  build is 9 days old..

Small change
1. Open the attached file
2. Delete the delete text using backspace (cursor moves up to "BBB")
3. Delete a "B" of "BBB" (needs 2 backspaces & bullet will disappear first)
Comment 4 raal 2018-08-03 17:01:14 UTC
This seems to have begun at the below commit.
Adding Cc: to Mark Hung  ; Could you possibly take a look at this one?
Thanks
 6ec3d2f6500b2566f5022b46e3575f387e0389a5 is the first bad commit
commit 6ec3d2f6500b2566f5022b46e3575f387e0389a5
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Jan 4 18:44:18 2018 +0100

    source a16b44481e3c5582dfb581f769e07ab94e8ac44b
author	Mark Hung <marklh9@gmail.com>	2017-12-30 01:00:26 +0800
committer	Mark Hung <marklh9@gmail.com>	2018-01-04 12:23:55 +0100
commit a16b44481e3c5582dfb581f769e07ab94e8ac44b (patch)
tree 1dadc7aeab6351535f392d87fc0a3303abf7dccf
parent 334601603aa04ea968e8a850f4e7f6cf52f7735b (diff)
tdf#114732 backspace can only make bullet invisible.
Comment 5 Mark Hung 2018-08-03 23:39:28 UTC
You need two backspace to delete a empty item, the first to make it disappear and the second make that disappear. That's by design.
Comment 6 Telesto 2018-08-04 06:54:08 UTC
(In reply to Mark Hung from comment #5)
> You need two backspace to delete a empty item, the first to make it
> disappear and the second make that disappear. That's by design.

They two backspaces isn't the problem. The issue is that while editing BBB the bullet we go first before the content, when following comment 3
Comment 7 Mark Hung 2018-08-06 16:08:45 UTC
(In reply to Telesto from comment #6)
> (In reply to Mark Hung from comment #5)
> > You need two backspace to delete a empty item, the first to make it
> > disappear and the second make that disappear. That's by design.
> 
> They two backspaces isn't the problem. The issue is that while editing BBB
> the bullet we go first before the content, when following comment 3

I got your point.

"Del" and "Backspace" work differently in "Outline" shape:

* Press "Del" at the end of the line: connect next paragraph to the current paragraph, and the paragraph style ( including bullet status ) for the current paragraph remains.
* Press "Backspace" at the beginning of the line: connect the current paragraph to the previous paragraph, and make the previous paragraph have the same style ( including bullet status ) as the current one.

So if you place the cursor after "BB", and press "Delete" all the way, the bullet won't disappear.

My patch there uncovered the delicate design of the original designer (from ooo age). I've once wanted to document the difference. It works as expected buy maybe we need UX eval here.
Comment 8 Heiko Tietze 2018-08-07 13:52:35 UTC
The problem is that it behaves differently not only to the previous versions but also to current Writer.

(In reply to Mark Hung from comment #7)
> * Press "Del" at the end of the line: connect next paragraph to the current
> paragraph, and the paragraph style ( including bullet status ) for the
> current paragraph remains.
> * Press "Backspace" at the beginning of the line: connect the current
> paragraph to the previous paragraph, and make the previous paragraph have
> the same style ( including bullet status ) as the current one.

True, but the question is what happens when you backspace at the end of the line. There is no reason to delete the bullet

> My patch there uncovered the delicate design of the original designer (from
> ooo age). I've once wanted to document the difference. It works as expected
> buy maybe we need UX eval here.

No, the expectation is to delete the bullet with backspace at the beginning of the line but not the end.
Comment 9 Mark Hung 2018-08-07 14:04:18 UTC
(In reply to Heiko Tietze from comment #8)
> The problem is that it behaves differently not only to the previous versions
> but also to current Writer.
> 
> (In reply to Mark Hung from comment #7)
> > * Press "Del" at the end of the line: connect next paragraph to the current
> > paragraph, and the paragraph style ( including bullet status ) for the
> > current paragraph remains.
> > * Press "Backspace" at the beginning of the line: connect the current
> > paragraph to the previous paragraph, and make the previous paragraph have
> > the same style ( including bullet status ) as the current one.
> 
> True, but the question is what happens when you backspace at the end of the
> line. There is no reason to delete the bullet


Imagine another case that bullet is turn off on purpose, maybe by pressing the button to turn it off, and put cursor at the beginning of the paragraph. Then press the backspace to connect two paragraphs. Can't say it's wrong to follow the style of the second paragraph when connecting two paragraphs. It's just a choice.

> 
> > My patch there uncovered the delicate design of the original designer (from
> > ooo age). I've once wanted to document the difference. It works as expected
> > buy maybe we need UX eval here.
> 
> No, the expectation is to delete the bullet with backspace at the beginning
> of the line but not the end.

Maybe my expression wasn't quite right. By "As expected" I meant the logic I mentioned was there from the beginning.
Comment 10 Heiko Tietze 2018-08-07 14:30:10 UTC
To me it's a regression, I don't see the benefit.
Comment 11 Commit Notification 2018-10-11 11:41:32 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=53d900fb334b2ce08ff19de0f765108e8c91a36f

tdf#119065 fix the style of two connected paragraphs.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2018-10-27 17:09:07 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9558457643af2c978a86ce1c744886d983a162d&h=libreoffice-6-1

tdf#119065 fix the style of two connected paragraphs.

It will be available in 6.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Stahl 2018-10-27 17:10:03 UTC
i believe this is fixed now
Comment 14 Xisco Faulí 2018-10-29 17:50:07 UTC
Indeed, verified in

Version: 6.2.0.0.alpha1+
Build ID: 19a0698079fbba36646a2d06eaec3a7fde60b2f5
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Mark Hung, Thanks for fixing this!!