tdf#119065 fix the style of two connected paragraphs.

Invoke ImpConnectParagraphs with bSpecialBackward set to
false by default in DeleteLeftOrRight(). Old design connect
backward when pressing backspace to connect two paragraphs.
The former paragraph of the two ( or the remain one ) adopt
the paragraph style ( bullet on/off status, color, etc. )
from the later paragraph.

It's hard to understand the intention of the original design,
and the design was not activated until LibreOffice6.1,
hence just don't connect backward anymore.

Change-Id: I3697acc01d718d7a769fb8d0bd573084c4fe2969
Reviewed-on: https://gerrit.libreoffice.org/61537
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>
(cherry picked from commit 53d900fb334b2ce08ff19de0f765108e8c91a36f)
Reviewed-on: https://gerrit.libreoffice.org/61701
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>